# pgm2hack

./: .gitignore  CMakeLists.txt  Makefile  README.md  app_patch.py  game.lds  gen_patch.py  pgm2.cmake
IDA Plugins/: WeaponAttrSet_Extract.py
python/: xyj2_role_pic_extract.py
src/: patch.S  xxpacth_include.h
src/game/: game_config.h  game_test.c  game_type.h  game_wave.h  hook_PlayerCnt.c  hook_dropfood.c  hook_givestartitem.c  hook_init.c  hook_screenupdate.c  hook_selectrole.c  pgm2_key.h  retarget.c  xyj2_func.h  xyj2_func_kensou.h
src/game/ChangeMan/changeman_0/: changeman_info_0.c
src/game/ChangeMan/changeman_1/: changeman_info_1.c
src/game/ChangeMan/changeman_10/: changeman_info_10.c
src/game/ChangeMan/changeman_11/: changeman_info_11.c
src/game/ChangeMan/changeman_12/: changeman_info_12.c
src/game/ChangeMan/changeman_13/: changeman_info_13.c
src/game/Include/: Action.h  Collision.h  Image.h  Input.h  Obj.h  Pal.h  Role.h  ScrFunc.h  ScrMacro.h  ScrMacroRole.h  ScrMacroRoro.h
src/game/Role/: Role_Act_Common.S
src/game/Stage/: Stage.c
src/game/System/: ICCard.h  MiniHeadInfo.c  PlayerInfo.h  PlayerSelect.c  PlayerSelect.c.bak  PlayerSelect.h  RoleIdRel.c  RoleInfo.h  RoleItemMemSet.h  SkillInput.c  SkillInput.h  SystemTable.c  WeaponTable.c
src/game/Text/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  Font.txt  Font2.txt  dialog.txt
src/game/cpp/: image.c  test.c
src/game/mainmenu/: mainmenu.c
src/log/: kensou.h
src/patch/: debug.S  hook.S  patch_Exp_Table.S  patch_Stage_Table.S  patch_WeaponAttr_Table.S  patch_level_table.S  retarget.S  test1.S  test2.S  test3.S  test4.S  test5.S  test_patch.S
(+189 files in other folders)
